map overflow fix

--- a/src/main/app/src/Components/Landscape/Map/Map.scss
+++ b/src/main/app/src/Components/Landscape/Map/Map.scss
@@ -2,6 +2,7 @@
 @import '../../../Ressources/styling/colors.scss';
 
 .landscapeMapContainer {
+  overflow: hidden;
   .map {
     font-family: $svg-font;
     text-shadow: none;
